AX: AccessibilityObject::invalidStatus() is incorrect when aria-invalid="undefined" or whitespace https://bugs.webkit.org/show_bug.cgi?id=130071

Patch by James Craig <jcraig@apple.com> on 2014-03-14
Reviewed by Chris Fleizach.

Accounted for whitespace values and the explicit string, "undefined".

Source/WebCore:

Test: accessibility/aria-invalid.html

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::invalidStatus):
* accessibility/AccessibilityObject.h:
* accessibility/atk/WebKitAccessibleInterfaceText.cpp:
(getAttributeSetForAccessibilityObject):

LayoutTests:

* accessibility/aria-invalid-expected.txt:
* accessibility/aria-invalid.html:

Canonical link: https://commits.webkit.org/148245@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165656 268f45cc-cd09-0410-ab3c-d52691b4dbfc